# trajectory-optimization-in-defense-evtols

./: .gitignore  .mypy.ini  .pylintrc  .ruff.toml  Home.py  Planning.py  README.md  dataset.md  dataset.py  main.py  perception_backend.py  planning_backend.py  pyproject.toml  pyrightconfig.json  requirements.txt  technical-report.md
.claude/: settings.local.json
.github/workflows/: ci.yml  run-tests-root.yml  tests.yml
.streamlit/: config.toml  optax_style.css
config/: perception_config.yaml  planning_config.yaml  vehicle_config.yaml
datasets/: ml_all_regions_summary.csv  ml_all_regions_summary.json
datasets/arunachal/control/: control_dataset.csv  control_dataset.feather  control_dataset.h5  control_dataset.npz  control_dataset.parquet  control_dataset.pkl
datasets/arunachal/ml/: baseline_results.csv  baseline_results.json
datasets/arunachal/perception/: osm_obstacle_inventory.csv  perception_metadata.json  perception_obstacle.csv  perception_terrain.csv
datasets/arunachal/planning/: planning_arunachal.csv  planning_arunachal.feather  planning_arunachal.h5  planning_arunachal.json  planning_arunachal.npz  planning_arunachal.parquet  planning_arunachal.pkl
datasets/arunachal/splits/: control_test_idx.npy  control_train_idx.npy  planning_val_idx.npy
datasets/arunachal/vehicle/: vehicle_dataset.csv  vehicle_dataset.feather  vehicle_dataset.h5  vehicle_dataset.npz  vehicle_dataset.parquet  vehicle_dataset.pkl
datasets/bangalore/control/: control_dataset.csv  control_dataset.feather  control_dataset.h5  control_dataset.npz  control_dataset.parquet  control_dataset.pkl
datasets/bangalore/ml/: baseline_results.csv  baseline_results.json
datasets/bangalore/perception_dataset/: osm_obstacle_inventory.csv  perception_metadata.json  perception_obstacle.csv  perception_terrain.csv
datasets/bangalore/planning_dataset/: planning_bangalore.csv  planning_bangalore.feather  planning_bangalore.h5  planning_bangalore.json  planning_bangalore.npz  planning_bangalore.parquet  planning_bangalore.pkl
datasets/bangalore/splits/: control_val_idx.npy  planning_test_idx.npy  planning_train_idx.npy
datasets/bangalore/vehicle/: vehicle_dataset.csv  vehicle_dataset.feather  vehicle_dataset.h5  vehicle_dataset.npz  vehicle_dataset.parquet  vehicle_dataset.pkl
datasets/chennai/perception_dataset/: osm_obstacle_inventory.csv  perception_metadata.json  perception_obstacle.csv  perception_terrain.csv
datasets/delhi/control/: control_dataset.npz
datasets/delhi/ml/: baseline_results.csv  baseline_results.json
datasets/delhi/perception_dataset/: osm_obstacle_inventory.csv  perception_metadata.json  perception_obstacle.csv  perception_terrain.csv
datasets/delhi/planning_dataset/: planning_8k_extra.csv  planning_8k_extra.feather  planning_8k_extra.h5  planning_8k_extra.npz  planning_8k_extra.parquet  planning_8k_extra.pkl  planning_dataset.csv  planning_dataset.feather  planning_dataset.h5  planning_dataset.json  planning_dataset.npz  planning_dataset.parquet  planning_dataset.pkl  planning_dataset_10k.h5  planning_dataset_10k.parquet  test_final.csv  test_final.feather  test_final.h5  test_final.json  test_final.npz  test_final.parquet  test_final.pkl
datasets/delhi/splits/: control_test_idx.npy  control_train_idx.npy  control_val_idx.npy  planning_test_idx.npy  planning_train_idx.npy  planning_val_idx.npy
datasets/delhi/vehicle/: vehicle_dataset.npz
datasets/guwahati/perception_dataset/: osm_obstacle_inventory.csv  perception_metadata.json  perception_obstacle.csv  perception_terrain.csv
datasets/imphal/perception_dataset/: osm_obstacle_inventory.csv  perception_metadata.json  perception_obstacle.csv  (+1 more)
datasets/ml_plots/: energy_distribution.eps  risk_label_distribution.eps  t1_auc_by_region.eps  t2_r2_by_region.eps
datasets/planning_dataset/: planning_dataset_10k.feather  planning_dataset_10k.h5  planning_dataset_10k.npz  planning_dataset_10k.pkl
doc/: architecture.md  control_layer.md  data_guide.md  datasheet.md  introduction.md  perception_layer.md  planning_layer.md  research_limitations.md  vehicle_layer.md
notebooks/: tutorial.ipynb
notebooks/html/: 00_system_overview.html  01_problem_formulation.html  02_system_architecture.html  04_planning_layer.html  05_vehicle_layer.html
notebooks/vehicle_outputs/: section7_hover.csv  vehicle_control_history.csv  vehicle_energy_history.csv  vehicle_state_history.csv
perception-layer/src/: __init__.py
research/: neurips_2026.tex  references.bib
research/icml2026/: evtol_traj_icml2026.bib  evtol_traj_icml2026.tex
research/submission/: README.md
scripts/: README.md  expand_dataset_10x.py  export_all_formats.py  export_astar_results.py  generate_control_dataset.py  perception_pipeline.py  plot_section7.py  region_configs.py  run_region.py  write_evtol_dataset.py
scripts/control/: dataset.py  validate_single_mission.py  visualize.py
scripts/ml/: baseline_experiments.py  eval_singletask.py  run_all_regions.py  train_neural_network.py
scripts/perception/: dataset.py  run_mumbai.py  run_region.py  scientific-formats.py  visuals.py
scripts/planning/: dataset.py  export.py  run_mumbai.py  visualize.py
scripts/vehicle/: dataset.py  visualize.py
src/: __init__.py
src/cli/: main.py
src/config/: planning_config.yaml
src/evtol/: __init__.py  setup.py
streamlit_app/: backend_service.py  colors.py  control_backend.py  home.py  main.py  perception_backend.py  planning_backend.py  sitl_connector.py  styles.py  telemetry_streamer.py  utils.py  vehicle_backend.py
streamlit_app/.streamlit/: config.toml
streamlit_app/pages/: .streamlit_css.py  Perception.py  Planning.py
streamlit_app/services/: mission_service.py  perception_service.py
submission/: README.md  neurips_2026.tex
tests/: test_perception_integration.py
tests/benchmarks/: run_benchmarks.py
tests/integration/: integration_test.py
tests/unit/: test_cli.py  test_geometry_derivatives.py  test_output_manager.py  test_planning_layer.py
(+300 files in other folders)
