[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evtol-trajectory-optimization"
version = "0.1.0"
description = "Multi-objective trajectory optimization system for eVTOL aircraft in defense applications"
authors = [{name = "IISc Research Team", email = "research@iisc.ac.in"}]
maintainers = [{name = "IISc Research Team", email = "research@iisc.ac.in"}]
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Aerospace",
]
keywords = [
    "trajectory-optimization",
    "eVTOL",
    "electric-aircraft",
    "multi-objective-optimization",
    "path-planning",
    "defense-applications",
]

[project.urls]
Repository = "https://github.com/irhyl/trajectory-optimization-in-defense-evtols"
Documentation = "https://trajectory-optimization.readthedocs.io"
"Bug Tracker" = "https://github.com/irhyl/trajectory-optimization-in-defense-evtols/issues"
Papers = "https://github.com/irhyl/trajectory-optimization-in-defense-evtols/tree/main/docs"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "black>=24.3.0",
    "ruff>=0.6.2",
    "mypy>=1.10.0",
    "pylint>=3.0.3",
    "pre-commit>=3.7.1",
]
docs = [
    "sphinx>=7.0.1",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "myst-parser>=1.0.0",
]
ml = [
    "tensorflow>=2.14.0",
    "torch>=2.1.0",
]

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = '''/(\.git|\.mypy_cache|\.pytest_cache|\.venv|venv|__pycache__|build|dist|\.eggs)/'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["evtol", "cli"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".git", "__pycache__", ".mypy_cache", ".pytest_cache", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pyright]
reportMissingTypeStubs = false
typeCheckingMode = "standard"
pythonVersion = "3.11"
exclude = ["**/node_modules", "**/__pycache__", ".venv"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src/evtol",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "benchmark: marks tests as benchmark tests",
]

[tool.coverage.run]
source = ["src/evtol"]
omit = ["*/tests/*", "*/examples/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "examples", ".venv"]
skips = ["B101", "B601"]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-module = true
fail-under = 50
exclude = ["tests", "examples", "scripts"]
verbose = 1


