[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "trajectory-optimization-defense-evtols"
version = "1.0.0"
description = "Trajectory optimization for defense eVTOL platforms in contested airspace"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    {name = "Defense eVTOL Research Team"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
# Rules enabled: pycodestyle, pyflakes, bugbear, pyupgrade
select = ["E", "W", "F", "B", "UP"]
# Ignored globally
ignore = [
    "E501",   # line-too-long — handled by formatter
    "B905",   # zip-without-explicit-strict — intentional in many places
    "E741",   # ambiguous-variable-name — 'l', 'O', 'I' are common in math
]

[tool.ruff.lint.per-file-ignores]
# Public re-export packages: imported names ARE the public API
"**/__init__.py" = ["F401"]
# Optional-dependency try/except blocks in module files
"**/output_manager.py" = ["F401"]
"**/visualization.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = false
